--- a/website/apps/profiles/templates/profiles/profile_list.html
+++ b/website/apps/profiles/templates/profiles/profile_list.html
@@ -40,9 +40,11 @@
 {% block inner %}
 
 <div class="listhead">
-	<div style="float: right;">
-		{% include "element/_pagination.html" %}
-	</div>
+
+    <div class="pagination-holder">
+        {% include "element/_pagination.html" %}
+    </div>
+
 </div>
 <!-- end: listing header / paginator -->
 
