--- a/website/site-static/sass/aplayer/_style.sass
+++ b/website/site-static/sass/aplayer/_style.sass
@@ -168,7 +168,7 @@ body.popup
   .screen.playlist
     overflow-y: scroll
     overflow-x: hidden
-    height: 400px
+    height: 562px
     width: 100%
     top: 182px
     position: fixed
@@ -295,3 +295,21 @@ body.popup
 
 
 
+
+
+
+body.popup
+  footer
+    .status
+      ul
+        padding-right: 8px
+        li
+          padding-right: 8px
+          span
+            font-size: 11px
+            color: #a5a5a5
+            padding-right: 4px
+          small
+            font-size: 11px
+            color: #666
+            text-transform: uppercase
