--- a/website/apps/alibrary/templates/alibrary/label_list.html
+++ b/website/apps/alibrary/templates/alibrary/label_list.html
@@ -50,14 +50,13 @@
 {% block inner %}
 
 <div class="listhead">
-	<div style="float: right;">
 
-		{% include "element/_pagination.html" %}
-
-	</div>
+    <div class="pagination-holder">
+        {% include "element/_pagination.html" %}
+    </div>
 
 	<div class="wrapper list_style">
-		<div>
+
 			<ul class="unstyled">
 				<li class="left">
 					<a href="{% spurl base=request.get_full_path set_query="list_style=s" %}" title="Set Style" class="action list_style s {% if list_style == "s" %}active{% endif %}"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Disply Type" /></a>
@@ -70,7 +69,7 @@
 				</li>
 				<li class="clear"></li>
 			</ul>
-		</div>
+
 	</div>
 
 </div>
