--- a/website/apps/alibrary/templates/alibrary/playlist/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/list_item_s.html
@@ -10,32 +10,9 @@
     <div class="list_body_item c1 image_center_bg"
          {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 36x36 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 
-
-        <ul class="unstyled action">
-
-            <li class="square">
-                <a href="#"
-                   data-ct="playlist"
-                   data-resource_uri="{{ item.get_api_url }}"
-                   data-offset=0
-                   data-mode="replace"
-                   title="{% trans "Play" %}" class="playable popup">
-                    <i class="icon icon-play"></i>
-                </a>
-            </li>
-
-            <li class="square">
-                <a href="#"
-                   data-ct="playlist"
-                   data-resource_uri="{{ item.get_api_url }}"
-                   data-offset=0
-                   data-mode="queue"
-                   title="{% trans "Queue" %}" class="playable popup">
-                    <i class="icon icon-reorder"></i></a>
-                </a>
-            </li>
-
-        </ul>
+        {% with object=item ct="playlist" %}
+            {% include "alibrary/element/_item_actions_primary.html" %}
+        {% endwith %}
 
     </div>
     <div class="list_body_item c2">
@@ -47,6 +24,16 @@
                 </a>
             </li>
 
+
+            {% if item.series %}
+            <li>
+                <span>{{ item.series.name|truncate_chars_inner:24 }} </span>
+                {% if item.series_number %}
+                    <small>#{{ item.series_number }}</small>
+                {% endif %}
+            </li>
+
+            {% endif %}
             <!--
 			<li class="small">
 				{% for tag in item.tags %}
@@ -57,14 +44,18 @@
 				{% endfor %}
 
 			</li>
-			-->
+            -->
         </ul>
     </div>
     <div class="list_body_item c3">
         <ul class="unstyled indicator">
 
             <li>
-                <a href="{{ item.user.get_absolute_url }}">{% firstof item.user.username item.user %}</a>
+                <a href="{{ item.user.get_absolute_url }}">{% firstof item.user.username|truncate_chars_inner:16 item.user|truncate_chars_inner:16 %}</a>
+                {% url alibrary-playlist-list as playlist_list %}
+                <a href="{% spurl path=playlist_list query="user={{ item.user.username }}" %}"
+                   title="{% trans "Only show playlists by" %} {% firstof item.user.username item.user %}"
+                   style="vertical-align: top;"><span class="filter icon"></span></a>
             </li>
 
         </ul>
@@ -126,43 +117,51 @@
 
 
     <div class="list_body_item c8 action">
-        <!-- Actions sub-view  -->
-        <!-- reworking -->
-        <div class="wrapper">
-            <ul class="unstyled horizontal pull-right">
 
-                <li>
-                    <a href="#" data-action="download" data-ct="playlist" data-id="{{ item.id }}"
-                       data-uuid="{{ item.uuid }}" title="{% trans "Download" %}">
-                        <i class="icon-download-alt"></i>
-                    </a>
-                </li>
 
-                <li>
-                    <a href="#" data-action="basket" data-ct="playlist" data-id="{{ item.id }}"
-                       data-uuid="{{ item.uuid }}" title="{% trans "Add to basket" %}">
-                        <i class="icon-plus"></i>
-                    </a>
-                </li>
+        <ul class="unstyled action secondary horizontal">
 
-                <li>
-                    <a href="#" data-action="schedule" data-ct="playlist" data-id="{{ item.id }}"
-                       data-uuid="{{ item.uuid }}" title="{% trans "Schedule" %}">
-                        <i class="icon-calendar"></i>
-                    </a>
-                </li>
+            <li>
+                <a href="#release:{{ item.pk }}:mp3"
+                   class="downloadable queue{% if not perms.alibrary.downoad_media %} disabled{% endif %}"
+                   data-ct="playlist"
+                   data-resource_uri="{{ item.get_api_url }}"
+                   title="{% trans "Download" %}">
+                    <i class="icon icon-download-alt"></i>
+                </a>
+            </li>
 
-                {% if user.is_authenticated and user == item.user %}
-                    <li>
-                        <a href="{{ item.get_edit_url }}" data-action="edit" data-ct="playlist" data-id="{{ item.id }}"
-                           data-uuid="{{ item.uuid }}" title="{% trans "Add to basket" %}">
-                            <i class="icon-edit"></i>
-                        </a>
-                    </li>
-                {% endif %}
+            <li>
+                <a href="#"
+                   class="{% if not user.is_authenticated %} disabled{% endif %}"
+                   data-action="collect"
+                   title="{% trans "Add to playlist" %}">
+                    <i class="icon icon-plus"></i>
+                </a>
+            </li>
 
-            </ul>
-        </div>
+            <li>
+                <a href="{{ item.get_edit_url }}"
+                   class="{% if user.is_authenticated and user == item.user %}{% else %} disabled{% endif %}"
+                   title="{% trans "Edit" %}">
+                    <i class="icon icon-edit"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="#"
+                   class="{% if not perms.alibrary.schedule_playlist or not item.type == "broadcast" %} disabled{% endif %}"
+                   data-action="schedule"
+                   data-ct="playlist"
+                   data-id="{{ item.id }}"
+                   data-uuid="{{ item.uuid }}"
+                   title="{% trans "Schedule" %}">
+                    <i class="icon icon-calendar"></i>
+                </a>
+            </li>
+
+
+        </ul>
 
     </div>
 
