--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -1,149 +1,173 @@
 {% extends "layout_base.html" %}
 
-{% load truncate i18n thumbnail arating_tags wiki_tags disqus_tags comments dajaxice_templatetags sekizai_tags alibrary_tags url_tags %}
+{% load truncate i18n thumbnail arating_tags wiki_tags disqus_tags comments atracker_tags dajaxice_templatetags sekizai_tags alibrary_tags url_tags %}
 
 
-{% block title %}{{ object.name }}{% if object.get_artist_display %} - {{ object.get_artist_display }}{% endif %} | {% endblock %}
+{% block title %}{{ object.name }}{% if object.get_artist_display %} - {{ object.get_artist_display }}{% endif %}
+    | {% endblock %}
 {% block meta_description %}{{ object.description|truncatewords:20 }}{% endblock %}
-{% block meta_keywords %}{% for tag in object.tags %}{{ tag.name }}{% if not forloop.last %}, {% endif %}{% endfor %}{% endblock %}
+{% block meta_keywords %}{% for tag in object.tags %}{{ tag.name }}{% if not forloop.last %}, {% endif %}
+{% endfor %}{% endblock %}
 {% block meta_opengraph %}{% include "alibrary/opengraph/_release.html" %}{% endblock %}
 
 
 {% block heading %}
-<!-- view specific scripts -->
-{% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/list.edit.js"></script>{% endaddtoblock %}
+    <!-- view specific scripts -->
+    {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/list.edit.js"></script>{% endaddtoblock %}
     {% addtoblock "js-post" %}
         <script type="text/javascript" src="{{ STATIC_URL }}exporter/js/base.js"></script>{% endaddtoblock %}
 
-{% addtoblock "js-post" %}
-    <script>
-    var list_edit = list_edit || {};
-    $(function(){
-       list_edit = new ListEditUi();
-       list_edit.init();
+    {% addtoblock "js-post" %}
+        <script>
+            var list_edit = list_edit || {};
+            $(function () {
+                list_edit = new ListEditUi();
+                list_edit.init();
 
-        exporter = new ExporterApp();
-        exporter.api_url = '{% url api_dispatch_list resource_name='export' api_name='v1'%}';
-        exporter.init();
-    });
-    </script>
-{% endaddtoblock %}
+                exporter = new ExporterApp();
+                exporter.api_url = '{% url api_dispatch_list resource_name='export' api_name='v1'%}';
+                exporter.init();
+            });
+        </script>
+    {% endaddtoblock %}
 
-<!-- heading / icon (large one) -->
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+    <!-- heading / icon (large one) -->
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 {% block modnav %} <!-- start: intra-module navigation -->
-<div id="modnav">
-	{% include "skeleton/modnav.html" %}
-</div>
-<!-- end: intra-module navigation -->
+    <div id="modnav">
+        {% include "skeleton/modnav.html" %}
+    </div>
+    <!-- end: intra-module navigation -->
 {% endblock %}
 
 {% block inner %}
 
 
 
-<div class="item_detail" style="">
+    <div class="item_detail" style="">
 
-	<section class="shaded">
-		<div class="row iteminfo release">
-			{% include "alibrary/release/_detail_info.html" %}
-		</div>
-	</section>
+        <section class="shaded">
+            <div class="row iteminfo release">
+                {% include "alibrary/release/_detail_info.html" %}
+            </div>
+        </section>
 
-	<div class="item_menu" id="item_menu">
-		<ul class="nav nav-tabs">
-			<li class="active">
-				<a href="#tracklist" data-toggle="tab">{% trans "Tracklist" %}</a>
-			</li>
-			{% if object.description %}
-			<li>
-				<a href="#description" data-toggle="tab">{% trans "Description" %}</a>
-			</li>
-			{% endif %}
-			<li>
-				<a href="#history" data-toggle="tab">{% trans "History" %}</a>
-			</li>
-		</ul>
-	</div>
+        <div class="item_menu" id="item_menu">
+            <ul class="nav nav-tabs">
+                <li class="active">
+                    <a href="#tracklist" data-toggle="tab">{% trans "Tracklist" %}</a>
+                </li>
+                {% if object.description %}
+                    <li>
+                        <a href="#description" data-toggle="tab">{% trans "Description" %}</a>
+                    </li>
+                {% endif %}
+                <li>
+                    <a href="#history" data-toggle="tab">{% trans "History" %}</a>
+                </li>
+                <li>
+                    <a href="#statistics" data-toggle="tab">{% trans "Statistics" %}</a>
+                </li>
+            </ul>
+        </div>
 
-	<div class="clear"></div>
+        <div class="clear"></div>
 
-	<section class="tabbed item_inner">
+        <section class="tabbed item_inner">
 
-		<div class="tab-content">
+            <div class="tab-content">
 
-			<div class="tab-pane active" id="tracklist">
-
-				<div class="listview container medias inner s">
-
+                <div class="tab-pane active" id="tracklist">
 
                     <section class="tracklist">
 
                         <h2>{% trans "Tracklist" %}</h2>
 
-                        <!--
-                        <div class="list_header"></div>
-                        -->
 
-                        <div class="list_body">
-                            {% for item in object.get_media %}
-                            {% include "alibrary/media/_list_item_xs.html" %}
-                            {% endfor %}
+                        <div class="listview container medias inner s">
+                            <!--
+                            <div class="list_header"></div>
+                            -->
+                            <div class="list_body">
+                                {% for item in object.get_media %}
+                                    {% include "alibrary/media/_list_item_xs.html" %}
+                                {% endfor %}
+                            </div>
+
                         </div>
 
                     </section>
 
 
+                </div>
 
-				</div>
-			</div>
+                <div class="tab-pane" id="description">
 
-			<div class="tab-pane" id="description">
+                    <section class="description">
 
-				<section class="description">
-					
-					<h2>{% trans "Release description" %}</h2>
-					
-					<div class="description markdown padded-h">
-						{% wikify object.description %}
-					</div>
-				</section>
+                        <h2>{% trans "Release description" %}</h2>
 
-			</div>
+                        <div class="description markdown padded-h">
+                            {% wikify object.description %}
+                        </div>
+                    </section>
 
-			<div class="tab-pane" id="history">
+                </div>
 
-				<section class="history">
-					
-					<h2>{% trans "Edit history" %}</h2>
-					
-					{% include "alibrary/element/_object_history.html" %}
-				</section>
+                <div class="tab-pane" id="history">
 
-			</div>
+                    <section class="history">
 
-			<div class="tab-pane" id="broadcasts">
-				...
-			</div>
-		</div>
+                        <h2>{% trans "Edit history" %}</h2>
 
-	</section>
+                        {% include "alibrary/element/_object_history.html" %}
+                    </section>
 
-	<section class="comments on-site">
-		{% include "element/chat/_object_comments.html" %}
-	</section>
-	
-	<section class="comments disqus">
-	{# disqus_show_comments #}
-	</section>
-	
-</div>
+                </div>
+
+
+
+                <div class="tab-pane" id="statistics">
+
+                    <section class="statistics">
+
+                        <h2>{% trans "Statistics" %}</h2>
+                        {% for item in object.get_media %}
+                            <div class="clear clearfix"><strong>#{{ item.tracknumber }} | <a href="{{ item.get_absolute_url }}">{{ item.name }}</a></strong></div>
+                            <ul class="horizontal unstyled" style="padding-bottom: 17px">
+                            {% stats_for_object item %}
+                            <li class="clear"></li>
+                            </ul>
+                        {% endfor %}
+
+                    </section>
+
+                </div>
+
+
+                <div class="tab-pane" id="broadcasts">
+                    ...
+                </div>
+            </div>
+
+        </section>
+
+        <section class="comments on-site">
+            {% include "element/chat/_object_comments.html" %}
+        </section>
+
+        <section class="comments disqus">
+            {# disqus_show_comments #}
+        </section>
+
+    </div>
 
 
 
@@ -156,23 +180,26 @@
 
     <div class="listing relations" style="padding-top: 8px;">
 
-	<div class="page-header">
-		<h2>{% trans "Show/share on" %} <small>{% trans "external links" %}</small></h2>
+        <div class="page-header">
+            <h2>{% trans "Show/share on" %}
+                <small>{% trans "external links" %}</small>
+            </h2>
 
-        <div class="item social">
-            <div class="fb-like" data-href="{% fullurl %}" data-width="200" data-layout="button_count" data-show-faces="false" data-send="true"></div>
+            <div class="item social">
+                <div class="fb-like" data-href="{% fullurl %}" data-width="200" data-layout="button_count"
+                     data-show-faces="false" data-send="true"></div>
+            </div>
+
         </div>
+
+        <div class="item relations">
+            {% relations_inline object %}
+        </div>
+
 
     </div>
 
-	<div class="item relations">
-        {% relations_inline object %}
-	</div>
-
-
-</div>
-
-<!-- relations -->
+    <!-- relations -->
 
 
 
