--- a/website/apps/aplayer/templates/aplayer/popup.html
+++ b/website/apps/aplayer/templates/aplayer/popup.html
@@ -59,8 +59,9 @@
 </div>
 
 <footer class="footer">
-	<div class="container">
-		
+	<div class="__container">
+
+        <!--
 		<form class="form-horizontal">
 		  <div class="control-group" id="playlists_inline_selector">
 		    <label class="control-label" for="inputEmail">{% trans "Active Basket" %}</label>
@@ -71,6 +72,19 @@
 		    </div>
 		  </div>
 		</form>
+        -->
+
+        <span class="pull-left">
+            <div class="noUiSlider" id="aplayer_volume" style="margin: 4px 0 0 10px;"></div>
+        </span>
+
+        <span class="status pull-right">
+            <ul class="horizontal unstyled">
+                <li><span>Mode</span><small id="aplayer_mode"> * loading * </small></li>
+                <li><span>Version</span><small id="aplayer_version"> * loading * </small></li>
+            </ul>
+
+        </span>
 
 	</div>
 </footer>
