--- a/website/apps/importer/templates/importer/import_list.html
+++ b/website/apps/importer/templates/importer/import_list.html
@@ -1,8 +1,13 @@
 {% extends "base/listing.html" %}
 
-{% load i18n webdesign %}
+{% load i18n webdesign sekizai_tags istats_tags %}
 
 {% block object_type %}import{% endblock %}
+
+
+{% block heading %} <!-- heading / icon (large one) -->
+    {% addtoblock "js-post" %}{% istats_scripts %}{% endaddtoblock %}
+{% endblock %}
 
 
 {% block pre_list %}
