--- a/website/apps/profiles/templates/profiles/profile/_list_item_m.html
+++ b/website/apps/profiles/templates/profiles/profile/_list_item_m.html
@@ -1,4 +1,4 @@
-{% load thumbnail i18n truncate display_tags arating_tags spurl %}
+{% load thumbnail i18n truncate display_tags arating_tags spurl spacify_tags %}
 
 
 
@@ -42,15 +42,15 @@
 	</div>
 
 	<div class="list_body_item c3">
-		<ul class="unstyled horizontal">
-			
-			{% for service in item.service_set.all %}
-			<li>
-			<a href="{{ service.service_url }}" class="skip-external"><i class="icon-link"></i></a>
-			</li>
-			{% endfor %}
-
-		</ul>
+			<ul class="unstyled horizontal">
+				<li>
+				{% for group in item.get_groups.all %}
+				<span>
+					{{ group.name|spacify }}{% if not forloop.last %}, {% endif %}
+				</span>
+				{% endfor %}
+				</li>
+			</ul>
 	</div>
 
 	<div class="list_body_item c4 action">
