--- a/website/site-static/css/aplayer.css
+++ b/website/site-static/css/aplayer.css
@@ -14590,6 +14590,111 @@ body .subhead .icontitle {
   font-style: italic;
 }
 
+/* line 1, ../sass/aplayer/_slider.sass */
+.noUiSlider {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  display: block;
+  cursor: default;
+  position: relative;
+  background: #cfcfcf;
+  border: 0 solid #cfcfcf;
+}
+/* line 10, ../sass/aplayer/_slider.sass */
+.noUiSlider * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  display: block;
+  cursor: default;
+}
+/* line 20, ../sass/aplayer/_slider.sass */
+.noUiSlider a {
+  position: absolute;
+  z-index: 1;
+}
+/* line 23, ../sass/aplayer/_slider.sass */
+.noUiSlider a:nth-child(2) {
+  background: inherit !important;
+}
+/* line 25, ../sass/aplayer/_slider.sass */
+.noUiSlider.vertical a {
+  width: 100%;
+  bottom: 0;
+}
+/* line 28, ../sass/aplayer/_slider.sass */
+.noUiSlider.horizontal a {
+  height: 100%;
+  right: 0;
+}
+/* line 33, ../sass/aplayer/_slider.sass */
+.noUiSlider.disabled {
+  background: #cccccc;
+  border-color: #cccccc;
+}
+/* line 34, ../sass/aplayer/_slider.sass */
+.noUiSlider.disabled div:before {
+  background: #cccccc;
+  border-color: #cccccc;
+}
+/* line 39, ../sass/aplayer/_slider.sass */
+.noUiSlider.horizontal {
+  border-width: 0 12px;
+}
+/* line 41, ../sass/aplayer/_slider.sass */
+.noUiSlider.vertical {
+  border-width: 12px 0;
+}
+/* line 43, ../sass/aplayer/_slider.sass */
+.noUiSlider div {
+  height: 44px;
+  width: 44px;
+  position: relative;
+}
+/* line 47, ../sass/aplayer/_slider.sass */
+.noUiSlider div:before {
+  position: absolute;
+  background: #00bb00;
+  content: "";
+}
+/* line 51, ../sass/aplayer/_slider.sass */
+.noUiSlider.horizontal div:before {
+  left: 10px;
+  height: 10px;
+  width: 24px;
+}
+/* line 55, ../sass/aplayer/_slider.sass */
+.noUiSlider.vertical div:before {
+  top: 10px;
+  width: 10px;
+  height: 24px;
+}
+/* line 73, ../sass/aplayer/_slider.sass */
+.noUiSlider.horizontal {
+  width: 300px;
+  height: 10px;
+}
+/* line 76, ../sass/aplayer/_slider.sass */
+.noUiSlider.horizontal div {
+  margin: 0 0 0 -22px;
+}
+/* line 78, ../sass/aplayer/_slider.sass */
+.noUiSlider.vertical {
+  width: 1px;
+  height: 300px;
+}
+/* line 81, ../sass/aplayer/_slider.sass */
+.noUiSlider.vertical div {
+  margin: -22px 0 0 1px;
+}
+
 /* line 16, ../sass/aplayer/_style.sass */
 html, body {
   height: 100%;
@@ -14742,7 +14847,7 @@ body.popup .screen.controls .image > img {
 body.popup .screen.playlist {
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 400px;
+  height: 562px;
   width: 100%;
   top: 182px;
   position: fixed;
@@ -14878,6 +14983,27 @@ body.popup #progress_bar > div.indicator .wrapper .inner {
   background: #ddffd9;
   opacity: 0.5;
   border-right: 1px solid #00bb00;
+}
+
+/* line 304, ../sass/aplayer/_style.sass */
+body.popup footer .status ul {
+  padding-right: 8px;
+}
+/* line 306, ../sass/aplayer/_style.sass */
+body.popup footer .status ul li {
+  padding-right: 8px;
+}
+/* line 308, ../sass/aplayer/_style.sass */
+body.popup footer .status ul li span {
+  font-size: 11px;
+  color: #a5a5a5;
+  padding-right: 4px;
+}
+/* line 312, ../sass/aplayer/_style.sass */
+body.popup footer .status ul li small {
+  font-size: 11px;
+  color: #666666;
+  text-transform: uppercase;
 }
 
 /* line 7, ../sass/aplayer.sass */
