--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -89,6 +89,9 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.tmpl.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jsrender.js"></script>{% endaddtoblock %}
 
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.nouislider.js"></script>{% endaddtoblock %}
+
+
 
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.history.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/history.js"></script>{% endaddtoblock %}
